--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,16 @@ DISCORD_TOKEN=your_bot_token_here
 GUILD_ID=your_guild_id_here
 
 # Auto Role
-AUTO_ROLE_ID=1474783981261029376
+AUTO_ROLE_ID=1474770465342881864
 
-# Log Channels
-VOICE_LOG_CHANNEL=1474774252602392809
-CHAT_LOG_CHANNEL=1474774198055473312
-MODERATION_LOG_CHANNEL=1474774288698708088
-ROLE_LOG_CHANNEL=1474774316968050688
+# Log Channels (New Category: 1474895832300912681)
+VOICE_LOG_CHANNEL=1474895995392229456
+CHAT_LOG_CHANNEL=1474895906703806524
+MODERATION_LOG_CHANNEL=1474896228818096189
+ROLE_LOG_CHANNEL=1474895950534152364
+
+# Rules Channel (for deadmineMAIN only)
+RULES_CHANNEL_ID=1474762147589390337
+
+# Report Channel (for weekly invite reports)
+REPORT_CHANNEL_ID=1474896083971739874
