--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ RULES_CHANNEL_ID=1474762147589390337
 REPORT_CHANNEL_ID=1474896083971739874
 
 # Ticket System
+TICKET_CHANNEL_ID=your_ticket_channel_id
 TICKET_CATEGORY_ID=your_ticket_category_id
 SUPPORT_ROLE_ID=your_support_role_id
 # Логи закрытия тикетов будут в MODERATION_LOG_CHANNEL
-# Для создания кнопки используйте Discord UI или другой способ
