--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ RULES_CHANNEL_ID=1474762147589390337
 # Report Channel (for weekly invite reports)
 REPORT_CHANNEL_ID=1474896083971739874
 
+# Invite Log Channel (for real-time invite tracking)
+INVITE_LOG_CHANNEL_ID=1475032866604974216
+
 # Ticket System
 TICKET_CHANNEL_ID=your_ticket_channel_id
 TICKET_CATEGORY_ID=your_ticket_category_id
